Fix image width too large

--- a/frontend/app/src/components/ProjectTimeline.css
+++ b/frontend/app/src/components/ProjectTimeline.css
@@ -24,4 +24,5 @@
 .Timeline-project-image {
   max-height: 300px;
   margin: 10px 10px;
+  max-width: 90%;
 }
